--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -18,6 +18,13 @@ jobs:
       with:
         # Disabling shallow clone is recommended for improving relevancy of reporting
         fetch-depth: 0
+    - name: Install Java 17
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y openjdk-17-jdk
+    - name: Verify Java version
+      run: java -version
+
     - name: SonarQube Scan
       uses: kitabisa/sonarqube-action@v1.2.0
       with:
